common-applications/test-environment/mindspore-repo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: mindspore-repo
  name: mindspore-repo
