common-applications/test-environment/mindspore-repo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: repo-deployment
  namespace: mindspore-repo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mindspore-repo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mindspore-repo
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      securityContext:
        seccompProfile:
          type: Localhost
          localhostProfile: infra-seccomp.json
      automountServiceAccountToken: false
      containers:
      - image: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/repo-test:76c0db
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 5
        name: repo
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 500m
            memory: 500Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        volumeMounts:
        - mountPath: /repo/mindspore
          name: data-volume
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: mindspore-repo-volume
