common-applications/test-environment/mindspore-repo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mindspore-repo-service
  namespace: openeuler-repo-mirror
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: mindspore-repo
  sessionAffinity: None
  type: ClusterIP
